add animated bg

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <h1> hello git users</h1>
+        <h2>crazy colors</h2>
         <script src="app.js"></script>
     </body>
 </html>
