title changed hello to hi

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="styles.css">
-        <title> hello </title>
+        <title> hi </title>
     </head>
     <body>
         <h1> hello git users</h1>
