--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="styles.css">
-        <title> hi </title>
+        <title> index </title>
     </head>
     <body>
 		<hr>
